--- a/element/element.css
+++ b/element/element.css
@@ -9,7 +9,7 @@
     --blue: #7daea3;
     --magenta: #d3869b;
     --cyan: #89b482;
-    --grey: #928374
+    --grey: #928374;
     --xcolor15: #ebdbb2;
 
     --sans: Ubuntu;
